# QuantBook-Live

./: .env.example  Makefile  MarketChart.jsx  README.md  app.js  display_utils.py  pyproject.toml  server.js  timescale_connector.py  trading_cli.py
.github/workflows/: ci.yml
client/src/: MarketChart.jsx
client/src/components/: OrderBookDepth.jsx
client/src/hook/: useWebSocket.js
config/: defaults.yaml  dev.env  prod.env
docs/: API.md
protos/: market_data.proto  simulator.proto
server/: server.py
server/microservices/data_generator/: engine.py  market_data_service.py
